# api_datalab

./: .env.example  README.md  pyproject.toml  requirements.txt
app/api/v1/: serializers.py  views.py
app/core/: constants.py  enums.py  handlers.py  models.py  process.py  querysets.py
app/meta/: views.py
config/: __init__.py  db.py  urls.py
