[tool.poetry]
name = "fast-api-base-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.72.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
# required versions for modules, if needed the module just uncomment the line
# mongoengine==0.23.1
# mongomock==3.19.0
# mongoengine-goodjson==1.1.8
# pymongo==3.12.0
sentry-sdk = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
